* Wed Dec 7 2016 Nick Miller <nick.miller@onxypoint.com> - 0.0.1
- First cut
- Content moved from simplib, added tests