@@ -1,6 +1,6 @@
 {
   "name":    "simp-at",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author":  "SIMP Team",
   "summary": "A SIMP Puppet module for managing at",
   "license": "Apache-2.0",
@@ -41,11 +41,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": "4.x"
-    },
-    {
-      "name": "pe",
-      "version_requirement": ">= 2016.2.0"
+      "version_requirement": ">= 4.6.0 < 5.0.0"
     }
   ]
 }
